# litelm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml  upstream-watch.yml
litelm/: __init__.py  _callbacks.py  _client_cache.py  _completion.py  _dispatch.py  _embedding.py  _exceptions.py  _logging.py  _providers.py  _responses.py  _text_completion.py  _types.py  exceptions.py  responses.py  types.py
litelm/providers/: _anthropic.py  _bedrock.py  _cloudflare.py  _mistral.py
scripts/: categorize_failures.py  ported_baseline.sh  ported_experiment.sh  sync_litellm_tests.sh  upstream_watch.py
scripts/upstream_snapshots/: api_surface.json  exceptions.json  meta.json  providers.json  types.json
tests/: conftest.py  stream_chunk_testdata.py  test_bedrock_errors.py  test_callbacks.py  test_capabilities.py  test_client_cache.py  test_completion.py  test_dispatch.py  test_dspy_smoke.py  test_embedding.py  test_exceptions.py  test_get_llm_provider.py  test_live.py  test_providers.py  test_responses.py  test_stream_chunk_builder.py  test_text_completion.py  test_types.py
tests/ported/: conftest.py  test_budget_management.py  test_callbacks_on_proxy.py  test_config.py  test_default_encoding_non_root.py  test_end_users.py  test_entrypoint.py  test_fallbacks.py  test_gpt5_azure_temperature_support.py  test_health.py  test_keys.py  test_litellm_proxy_responses_config.py  test_models.py  test_new_vector_store_endpoints.py  test_openai_endpoints.py  test_organizations.py  test_otel_thread_leak.py  test_presidio_latency.py  test_proxy_server_non_root.py  test_ratelimit.py  test_resource_cleanup.py  test_service_logger_otel.py  test_team.py  test_team_logging.py  test_team_members.py  test_users.py
(+1409 files in other folders)
