[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litelm"
version = "0.4.0"
description = "Lightweight litellm replacement — thin OpenAI-SDK routing layer for multi-provider LLM calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kenneth Wolters" },
]
keywords = ["llm", "openai", "litellm", "ai", "completion", "embedding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.24.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
cloudflare = []  # only needs httpx (base dep)
anthropic = ["anthropic>=0.39.0"]
bedrock = ["boto3>=1.28.0"]
all = ["anthropic>=0.39.0", "boto3>=1.28.0"]

[project.urls]
Homepage = "https://github.com/kennethwolters/litelm"
Repository = "https://github.com/kennethwolters/litelm"
Issues = "https://github.com/kennethwolters/litelm/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 10
asyncio_mode = "auto"
markers = ["live: requires real API keys"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[dependency-groups]
dev = [
    "dspy>=3.1.3",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.1",
    "pytest-mock>=3.10",
    "respx>=0.20",
]
